k8s/spot-apps/output.yaml
---
# Source: spot-apps/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spot-gateway
  labels:
    app: spot-gateway
spec:
  type: ClusterIP
  selector:
    app: spot-gateway
  ports:
    - port: 80
      targetPort: 8080
---
# Source: spot-apps/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spot-order
  labels:
    app: spot-order
spec:
  type: ClusterIP
  selector:
    app: spot-order
  ports:
    - port: 8082
      targetPort: 8082
---
# Source: spot-apps/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spot-payment
  labels:
    app: spot-payment
spec:
  type: ClusterIP
  selector:
    app: spot-payment
  ports:
    - port: 8084
      targetPort: 8084
---
# Source: spot-apps/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spot-store
  labels:
    app: spot-store
spec:
  type: ClusterIP
  selector:
    app: spot-store
  ports:
    - port: 8083
      targetPort: 8083
---
# Source: spot-apps/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spot-user
  labels:
    app: spot-user
spec:
  type: ClusterIP
  selector:
    app: spot-user
  ports:
    - port: 8081
      targetPort: 8081
---
# Source: spot-apps/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spot-gateway
  labels:
    app: spot-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spot-gateway
  template:
    metadata:
      labels:
        app: spot-gateway
    spec:
      containers:
        - name: spot-gateway
          image: 322546275072.dkr.ecr.ap-northeast-2.amazonaws.com/spot-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 800m
              memory: 1Gi

          # 헬스 체크
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
            successThreshold: 1

          # 헬스 체크 (Liveness)
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 5

          # 볼륨 마운트
          volumeMounts:
            - name: app-config
              mountPath: /config
              readOnly: true

      volumes:
        - name: app-config
          configMap:
            name: spot-app-config
---
# Source: spot-apps/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spot-order
  labels:
    app: spot-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spot-order
  template:
    metadata:
      labels:
        app: spot-order
    spec:
      containers:
        - name: spot-order
          image: 322546275072.dkr.ecr.ap-northeast-2.amazonaws.com/spot-order:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 800m
              memory: 1Gi

          # 헬스 체크
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 90
            periodSeconds: 10

          # 헬스 체크 (Liveness)
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 120
            periodSeconds: 30

          # 볼륨 마운트
          volumeMounts:
            - name: app-config
              mountPath: /config
              readOnly: true

      volumes:
        - name: app-config
          configMap:
            name: spot-app-config
---
# Source: spot-apps/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spot-payment
  labels:
    app: spot-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spot-payment
  template:
    metadata:
      labels:
        app: spot-payment
    spec:
      containers:
        - name: spot-payment
          image: 322546275072.dkr.ecr.ap-northeast-2.amazonaws.com/spot-payment:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 800m
              memory: 1Gi

          # 헬스 체크
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 90
            periodSeconds: 10

          # 헬스 체크 (Liveness)
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 120
            periodSeconds: 30

          # 볼륨 마운트
          volumeMounts:
            - name: app-config
              mountPath: /config
              readOnly: true

      volumes:
        - name: app-config
          configMap:
            name: spot-app-config
---
# Source: spot-apps/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spot-store
  labels:
    app: spot-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spot-store
  template:
    metadata:
      labels:
        app: spot-store
    spec:
      containers:
        - name: spot-store
          image: 322546275072.dkr.ecr.ap-northeast-2.amazonaws.com/spot-store:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 800m
              memory: 1Gi

          # 헬스 체크
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 90
            periodSeconds: 10

          # 헬스 체크 (Liveness)
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 120
            periodSeconds: 30

          # 볼륨 마운트
          volumeMounts:
            - name: app-config
              mountPath: /config
              readOnly: true

      volumes:
        - name: app-config
          configMap:
            name: spot-app-config
---
# Source: spot-apps/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spot-user
  labels:
    app: spot-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spot-user
  template:
    metadata:
      labels:
        app: spot-user
    spec:
      containers:
        - name: spot-user
          image: 322546275072.dkr.ecr.ap-northeast-2.amazonaws.com/spot-user:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 800m
              memory: 1Gi

          # 헬스 체크
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 90
            periodSeconds: 10

          # 헬스 체크 (Liveness)
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 120
            periodSeconds: 30

          # 볼륨 마운트
          volumeMounts:
            - name: app-config
              mountPath: /config
              readOnly: true

      volumes:
        - name: app-config
          configMap:
            name: spot-app-config
---
# Source: spot-apps/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  namespace: spot
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "spot-dev-alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/subnets: "subnet-0da7c6829952833c5, subnet-05c166744c29468c0"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/healthcheck-path: "/actuator/health"
spec:
  ingressClassName: alb
  rules:
    # 도메인(Spot, Kafka, Temporal, Grafana)
    - host: www.spotorder.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spot-gateway
                port:
                  number: 80
---
# Source: spot-apps/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: infra
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "spot-dev-alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/subnets: "subnet-0da7c6829952833c5, subnet-05c166744c29468c0"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  ingressClassName: alb
  rules:
    # 도메인(Spot, Kafka, Temporal, Grafana)
    - host: kafka.spotorder.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui-svc
                port:
                  number: 80
---
# Source: spot-apps/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temporal-ingress
  namespace: infra
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "spot-dev-alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/subnets: "subnet-0da7c6829952833c5, subnet-05c166744c29468c0"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  ingressClassName: alb
  rules:
    # 도메인(Spot, Kafka, Temporal, Grafana)
    - host: temporal.spotorder.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: temporal-ui-svc
                port:
                  number: 80
---
# Source: spot-apps/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "spot-dev-alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/subnets: "subnet-0da7c6829952833c5, subnet-05c166744c29468c0"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/healthcheck-path: "/api/health"
spec:
  ingressClassName: alb
  rules:
    # 도메인(Spot, Kafka, Temporal, Grafana)
    - host: grafana.spotorder.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 80
